# YNAB-Cli-Tool

./: .gitignore  Cargo.toml  classes.json  ynab.cache
src/: classifier.rs  lib.rs  main.rs  ynab_api.rs
